Closed Bug 405606 Opened 17 years ago Closed 17 years ago

crash @ -[ChildView mouseMoved:]

Categories

(Core :: Widget: Cocoa, defect, P3)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: moco, Assigned: jaas)

References

()

Details

Attachments

(1 file)

1.54 KB, patch
stuart.morgan+bugzilla
: review+
Details | Diff | Splinter Review
topcrash @ -[ChildView mouseMoved:]

looking at crash-stats, this looks to be a top crasher on Mac OS X for Fx 3.0b1

See http://crash-stats.mozilla.com/report/index/9497b76e-9b93-11dc-8951-001a4bd43e5c

in gdb, I saw that mGeckoChild is null, so we were crashing here:

2746      mGeckoChild->DispatchMouseEvent(geckoEvent);

#0  0x3334d591 in -[ChildView mouseMoved:] (self=0x43f727d0, _cmd=0x90ab8ba4, theEvent=0x469e95a0) at /Users/sspitzer/Desktop/trunk/mozilla/widget/src/cocoa/nsChildView.mm:2746
#1  0x3334d372 in -[ChildView mouseMoved:] (self=0x3cc7bb10, _cmd=0x90ab8ba4, theEvent=0x469e95a0) at /Users/sspitzer/Desktop/trunk/mozilla/widget/src/cocoa/nsChildView.mm:2690
#2  0x9336ec15 in -[NSWindow sendEvent:] ()
#3  0x93360384 in -[NSApplication sendEvent:] ()
#4  0x9328ae1e in -[NSApplication run] ()
#5  0x3333ec3a in nsAppShell::Run (this=0x2925c90) at /Users/sspitzer/Desktop/trunk/mozilla/widget/src/cocoa/nsAppShell.mm:565
#6  0x32682371 in nsAppStartup::Run (this=0x295a1b0) at /Users/sspitzer/Desktop/trunk/mozilla/toolkit/components/startup/src/nsAppStartup.cpp:170
#7  0x002112b2 in XRE_main (argc=1, argv=0xbffff758, aAppData=0x290b2b0) at /Users/sspitzer/Desktop/trunk/mozilla/toolkit/xre/nsAppRunner.cpp:3142
#8  0x00002798 in main (argc=1, argv=0xbffff758) at /Users/sspitzer/Desktop/trunk/mozilla/browser/app/nsBrowserApp.cpp:153

I hit this with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b2pre) Gecko/2007112512 Minefield/3.0b2pre clicking around on http://www.ohloh.net/
Flags: blocking-firefox3?
Assignee: nobody → joshmoz
Component: General → Widget: Cocoa
Flags: blocking-firefox3?
Product: Firefox → Core
QA Contact: general → cocoa
Flags: blocking1.9?
I know what this is, fix coming up.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P3
Attached patch fix v1.0Splinter Review
Attachment #290453 - Flags: review?(stuart.morgan)
Comment on attachment 290453 [details] [diff] [review]
fix v1.0

r=smorgan.

Is there a follow-up bug filed to sweep nsChildView for any other cases like this so that they can be fixed preemptively?
Attachment #290453 - Flags: review?(stuart.morgan) → review+
Comment on attachment 290453 [details] [diff] [review]
fix v1.0

There is no followup bug for that in particular, but I usually keep an eye out for this when I'm around this file. Also Steven and I are planning on doing a sweep soon because of another blocker we have related to this sort of thing.
Attachment #290453 - Flags: superreview?(roc)
Attachment #290453 - Flags: superreview?(roc) → superreview+
landed on trunk, let me know if you see a crash like this again Seth
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
> landed on trunk, let me know if you see a crash like this again Seth

Will do. 

 Additionally (and even better), let's check the crash-stats link in this bug and see that for build ids after your fix we don't see this stack trace anymore.


You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: