check to see if our widget got destroyed after a couple of gecko events get sent in our mouse moved handler. b=405606 r=smorgan sr=roc